@@ -197,6 +197,17 @@
                                 </configuration>
                             </execution>
                             <execution>
+                                <id>index-api-example</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.IndexApiExample</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>sift</id>
                                 <goals>
                                     <goal>exec</goal>
@@ -272,6 +283,18 @@
                                         <argument>-ea</argument>
                                         <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
                                         <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>index-api-example</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.IndexApiExample</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
@@ -403,6 +426,20 @@
                                         <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
                                         <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
                                         <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>index-api-example</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
+                                        <argument>io.github.jbellis.jvector.example.IndexApiExample</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
